<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.android.miwork.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/numbers"
            style="@style/CategoryStyle"
            android:background="@color/category_numbers"
            android:onClick="openNumbersActivity"
            android:text="@string/category_numbers" />

        <TextView
            android:id="@+id/family"
            style="@style/CategoryStyle"
            android:background="@color/category_family"
            android:onClick="openFamilyActivity"
            android:text="@string/category_family" />

        <TextView
            android:id="@+id/colors"
            style="@style/CategoryStyle"
            android:background="@color/category_colors"
            android:onClick="openColorsActivity"
            android:text="@string/category_colors" />

        <TextView
            android:id="@+id/phrases"
            style="@style/CategoryStyle"
            android:background="@color/category_phrases"
            android:onClick="openPhrasesActivity"
            android:text="@string/category_phrases" />

        <TextView
            android:id="@+id/days"
            style="@style/CategoryStyle"
            android:background="@color/category_days"
            android:onClick="openDaysActivity"
            android:text="@string/category_Days" />

        <TextView
            style="@style/CategoryStyle"
            android:background="@color/category_Months"
            android:text="@string/category_Months"
            android:onClick="openMonthsActivity"
            android:id="@+id/months"/>
        <TextView
            style="@style/CategoryStyle"
            android:id="@+id/animals"
            android:text="@string/category_animals"
            android:onClick="openAnimalsActivity"
            android:background="@color/category_Animals" />
    </LinearLayout>
</ScrollView>
